<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/internal_screen" 
    android:padding="@dimen/activity_vertical_margin">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_bg_rect"
        android:gravity="center"
        android:padding="@dimen/activity_vertical_margin"
        android:text="Change Password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textStyle="bold" />
    
    <ScrollView 
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@drawable/white_bg_rect"
	    android:padding="@dimen/activity_vertical_margin">
    
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
    
        <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:background="@drawable/white_bg_rect"
        android:ems="10"
        android:singleLine="true"
        android:padding="2dp"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword" >
    </EditText>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editTextNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:background="@drawable/white_bg_rect"
        android:singleLine="true"
        android:ems="10"
        android:padding="2dp"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword" >
    </EditText>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editTextConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:background="@drawable/white_bg_rect"
        android:singleLine="true"
        android:ems="10"
        android:padding="2dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:inputType="textPassword" >
    </EditText>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutRemoveChange"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@color/indigo"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:visibility="visible" />

        <TextView
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@color/login_btn_color_pressed"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/reset"
            android:textColor="@android:color/white"
            android:visibility="visible" />
    </LinearLayout>
        
    </LinearLayout>
    
</ScrollView>
</LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutProgress"
        android:background="@color/black_transculaent"
        android:visibility="invisible">
        
        <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
            android:id="@+id/google_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            style="@style/GPlusProgressBar"/>
    
	    <!-- <com.luminousinfoways.makemyreportandroid.util.NumberProgressBar
	        android:id="@+id/numberProgressBar1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>-->
       
    </LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutTransparent"
        android:background="#00ffffff"
        android:orientation="vertical"/>
    
    <include 
           layout="@layout/custom_notification_layout"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:visibility="invisible"/>
    
</RelativeLayout>
