<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/internal_screen"
    android:orientation="vertical">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainL"
    android:background="@drawable/internal_screen"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:id="@+id/rLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_bg_rect"
            android:id="@+id/tvTitle"
            android:gravity="center"
            android:padding="@dimen/activity_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        
        <RelativeLayout 
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:layout_margin="2dp">
	    
		    <ImageView 
		        android:layout_width="@dimen/red_circle_width_height"
		        android:layout_height="@dimen/red_circle_width_height"
		        android:src="@drawable/green_circle"
		        android:adjustViewBounds="true"
		        android:scaleType="fitCenter"/>
		    
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerInParent="true"
		        android:id="@+id/no_of_times_report_submited"
		        android:gravity="center"
		        android:textSize="12sp"
		        android:textColor="@android:color/white"
		        android:text="00"/>
	    
	    </RelativeLayout>
        
    </RelativeLayout>

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:layout_below="@id/rLayout"-->
        <!--android:id="@+id/address"-->
        <!--android:visibility="gone"-->
        <!--android:gravity="center"-->
        <!--android:textSize="12sp"-->
        <!--android:layout_marginBottom="15dp"-->
        <!--android:padding="10dp"-->
        <!--android:background="@drawable/white_bg_rect"-->
        <!--android:textColor="@android:color/black"-->
        <!--android:text="Address : "/>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rLayout"
        android:layout_above="@+id/btnSubmit"
        android:layout_marginBottom="2dp"
        android:background="@drawable/white_bg_rect"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imgPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_centerInParent="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_action_camera" />
        
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutRemoveChange"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/btnRemovePic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/remove_photo"
            android:textColor="@android:color/white"
            android:visibility="visible" />

        <TextView
            android:id="@+id/btnCahngePic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="@color/indigo"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/change_photo"
            android:textColor="@android:color/white"
            android:visibility="visible" />
    </LinearLayout>
        
    </RelativeLayout>

    <TextView
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/login_btn_color_pressed"
        android:gravity="center"
        android:padding="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/submit"
        android:textColor="@color/white" />
    
    </RelativeLayout>

    
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutProgress"
        android:background="@color/black_transculaent"
        android:visibility="invisible">
        
        <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
            android:id="@+id/google_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            style="@style/GPlusProgressBar"/>
    
	    <!-- <com.luminousinfoways.makemyreportandroid.util.NumberProgressBar
	        android:id="@+id/numberProgressBar1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>-->
       
    </LinearLayout>
    
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutTransparent"
        android:background="#00ffffff"
        android:orientation="vertical"/>
     
     <include 
           layout="@layout/custom_notification_layout"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:visibility="invisible"/>

</RelativeLayout>